fix(label): spacing was off

--- a/src/components/post/label/label.module.css
+++ b/src/components/post/label/label.module.css
@@ -9,7 +9,7 @@
 }
 
 .label {
-  padding-right: 8px;
+  padding: 0 5px;
 }
 
 .black {
